CREATE EXTENSION IF NOT EXISTS postgis;
CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-06-16T11:21:19.457Z

CREATE TYPE "user_role" AS ENUM (
  'admin',
  'farmer',
  'service_provider'
);

CREATE TYPE "mission_status" AS ENUM (
  'ongoing',
  'complete',
  'canceled',
  'aborted'
);

CREATE TYPE "pc1_mission_status" AS ENUM (
  'ongoing',
  'inspection_complete',
  'spraying_complete',
  'aborted'
);

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar UNIQUE NOT NULL,
  "password_hash" varchar NOT NULL,
  "name" varchar,
  "role" user_role NOT NULL DEFAULT 'farmer',
  "is_active" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "field_ownerships" (
  "field_id" int NOT NULL,
  "user_id" int NOT NULL,
  "ownership_percentage" decimal(5,2) NOT NULL,
  PRIMARY KEY ("field_id", "user_id")
);

CREATE TABLE "fields" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "crop_name" varchar,
  "boundary" geometry,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "mission_types" (
  "id" varchar PRIMARY KEY,
  "pilot_case" varchar,
  "partner" varchar,
  "description" varchar
);

CREATE TABLE "missions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "commander_id" int,
  "field_id" int,
  "mission_type" varchar,
  "status" mission_status,
  "start_time" timestamptz,
  "end_time" timestamptz,
  "mission_date" timestamptz
);

CREATE TABLE "pc1_weed" (
  "id" int,
  "inspection_id" int,
  "name" varchar,
  "image" varchar,
  "confidence" float,
  "weed_loc" geometry,
  "needs_verification" bool,
  "verified" bool,
  "is_sprayed" bool,
  "spray_time" timestamptz,
  "quantity" float,
  PRIMARY KEY ("id", "inspection_id")
);

CREATE TABLE "pc1_missions" (
  "mission_id" int PRIMARY KEY,
  "status" pc1_mission_status
);

CREATE TABLE "pc2_ecorobotix" (
  "mission_id" int PRIMARY KEY,
  "geojson_uri" varchar,
  "geotiff_uri" varchar
);

CREATE TABLE "pc2_dti" (
  "mission_id" int PRIMARY KEY,
  "photo_uri" varchar,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "pc3_inspections" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mission_id" int NOT NULL,
  "timestamp_unix" float,
  "location" geometry,
  "biomass" float,
  "altitude_m" float,
  "avg_dim_x_cm" float,
  "avg_dim_y_cm" float,
  "avg_dim_z_cm" float,
  "avg_volume_cm3" float,
  "avg_fol_area_cm2" float,
  "avg_ndvi" float,
  "avg_biomass" float,
  "avg_fertilization" float,
  "suggested_fertilization" float,
  "chosen_fertilization" float
);

CREATE TABLE "pc4_monitoring" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mission_id" int NOT NULL,
  "channel_name" varchar,
  "biomass" float,
  "fruit_quality" float,
  "growth_insight" float
);

CREATE TABLE "pc5_trees" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "field_id" int,
  "tree_identifier" varchar,
  "variety" varchar,
  "rootstock" varchar,
  "planting_date" int,
  "grid_row" int,
  "grid_col" int,
  "location" geometry,
  "elevation" float
);

CREATE TABLE "pc5_harvests" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mission_id" int,
  "tree_id" int,
  "record_type" varchar,
  "fruit_count" int
);

CREATE TABLE "pc5_apples" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "harvest_id" int,
  "apple_id" varchar,
  "size_class" varchar,
  "overcolor_class" varchar,
  "picture_id" varchar,
  "class_id" int,
  "bbox_x" float,
  "bbox_y" float,
  "bbox_width" float,
  "bbox_height" float,
  "confidence" float
);

CREATE TABLE "pc6_operations" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mission_id" int,
  "tree_id" int,
  "operation_type" varchar,
  "record_type" varchar,
  "branches_to_cut_count" int,
  "branches_cut_count" int
);

CREATE TABLE "pc6_branches" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "operation_id" int,
  "branch_id" varchar,
  "age_years" int,
  "length_m" float,
  "diameter_cm" float,
  "picture_id" varchar,
  "class_id" int,
  "bbox_x" float,
  "bbox_y" float,
  "bbox_width" float,
  "bbox_height" float,
  "confidence" float
);

CREATE UNIQUE INDEX ON "pc5_trees" ("field_id", "tree_identifier");

COMMENT ON TABLE "users" IS 'Application users used for JWT authentication.';

COMMENT ON TABLE "field_ownerships" IS 'Many-to-many ownership relation between users and farms.';

COMMENT ON TABLE "fields" IS 'Field / plot registry. boundary is a PostGIS Polygon in SRID 4326.';

COMMENT ON COLUMN "fields"."boundary" IS 'Postgis Polygon';

COMMENT ON COLUMN "pc1_weed"."weed_loc" IS 'Postgis Point';

COMMENT ON COLUMN "pc3_inspections"."location" IS 'Postgis Point';

COMMENT ON COLUMN "pc5_trees"."location" IS 'Postgis Point';

COMMENT ON COLUMN "pc5_harvests"."record_type" IS 'inspection or application';

COMMENT ON COLUMN "pc6_operations"."operation_type" IS 'thinning or pruning';

COMMENT ON COLUMN "pc6_operations"."record_type" IS 'inspection or application';

ALTER TABLE "field_ownerships" ADD FOREIGN KEY ("field_id") REFERENCES "fields" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "field_ownerships" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "missions" ADD FOREIGN KEY ("commander_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "missions" ADD FOREIGN KEY ("field_id") REFERENCES "fields" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "missions" ADD FOREIGN KEY ("mission_type") REFERENCES "mission_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc1_weed" ADD FOREIGN KEY ("inspection_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc1_missions" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc2_ecorobotix" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc2_dti" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc3_inspections" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc4_monitoring" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc5_trees" ADD FOREIGN KEY ("field_id") REFERENCES "fields" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc5_harvests" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc5_harvests" ADD FOREIGN KEY ("tree_id") REFERENCES "pc5_trees" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc5_apples" ADD FOREIGN KEY ("harvest_id") REFERENCES "pc5_harvests" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc6_operations" ADD FOREIGN KEY ("mission_id") REFERENCES "missions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc6_operations" ADD FOREIGN KEY ("tree_id") REFERENCES "pc5_trees" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pc6_branches" ADD FOREIGN KEY ("operation_id") REFERENCES "pc6_operations" ("id") DEFERRABLE INITIALLY IMMEDIATE;
