TableGroup "Core Infrastructure" [color: #1E69FD] {
  users
  field_ownerships
  fields
}

Enum user_role {
  admin
  farmer
  service_provider
}

Table users {
  id int [pk, increment]
  email varchar [not null, unique]
  password_hash varchar [not null]
  name varchar
  role user_role [not null, default: 'farmer']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  Note: 'Application users used for JWT authentication.'
}


Table field_ownerships {
  field_id int [not null, ref: > fields.id]
  user_id int [not null, ref: > users.id]
  ownership_percentage decimal(5,2) [not null]

  indexes {
    (field_id, user_id) [pk]
  }

  Note: 'Many-to-many ownership relation between users and farms.'
}

Table fields {
  id int [pk, increment]
  name varchar [not null]
  crop_name varchar
  boundary geometry [note:'Postgis Polygon']
  created_at timestamptz [not null, default: `now()`]
  Note: 'Field / plot registry. boundary is a PostGIS Polygon in SRID 4326.'
}

TableGroup "Missions" [color: #1E69FD]{
  missions
  mission_types
}

Table mission_types{
  id varchar [pk]
  pilot_case varchar
  partner varchar
  description varchar
}

enum mission_status{
  ongoing
  complete
  canceled
  aborted
}

Table missions {
  id int [pk, increment]
  commander_id int [ref: > users.id]
  field_id int [ref: > fields.id]
  mission_type varchar [ref: > mission_types.id]
  status mission_status
  start_time timestamptz
  end_time timestamptz
  mission_date timestamptz
}

TableGroup "Pilot Case 1 (AUA): Weed Identification and spot spraying for wheat/corn" [color: #2D862B]{
pc1_weed
pc1_missions
}

Table pc1_weed {
  id int
  inspection_id int [ref: > missions.id]
  name varchar
  image varchar
  confidence float
  weed_loc geometry [note:'Postgis Point']
  needs_verification bool
  verified bool
  is_sprayed bool
  spray_time timestamptz
  quantity float


    indexes {
    (id, inspection_id) [pk]
  }
}

enum pc1_mission_status{
  ongoing
  inspection_complete
  spraying_complete
  aborted
}

Table pc1_missions {
  mission_id int [pk, ref:> missions.id]
  status pc1_mission_status
}



TableGroup "Pilot Case 2 (DTI, Ecorobotix): Robotic spraying of weeds in potato and volunteer potatoes" [color: #D95B16]{
  pc2_ecorobotix
  pc2_dti
}


Table pc2_ecorobotix
{
  mission_id int [pk, ref: > missions.id]
  geojson_uri varchar
  geotiff_uri varchar
}

Table pc2_dti {
  mission_id int [pk, ref: > missions.id]
  photo_uri varchar
  created_at timestamptz [not null, default: `now()`]
}

TableGroup "Pilot Case 3 (POLIBA): Robotic fertilization management for leafy vegetables in open field conditions" [color: #A934C1]{
pc3_inspections
}

Table pc3_inspections
{
  id int [pk, increment]
  mission_id int [not null, ref: > missions.id]
  timestamp_unix float
  location geometry [note:'Postgis Point']
  biomass float
  altitude_m float
  avg_dim_x_cm float
  avg_dim_y_cm float
  avg_dim_z_cm float
  avg_volume_cm3 float
  avg_fol_area_cm2 float
  avg_ndvi float
  avg_biomass float
  avg_fertilization float
  suggested_fertilization float  
  chosen_fertilization float 
}



TableGroup "Pilot Case 4 (POLIBA): Robotic technologies for crop monitoring and management in soilless tomato cultivation" [color: #050505] {
  pc4_monitoring
}

Table pc4_monitoring {
  id int [pk, increment]
  mission_id int [not null, ref: > missions.id]
  channel_name varchar
  biomass float
  fruit_quality float
  growth_insight float
}

TableGroup "Pilot Case 5 (KUL): Robotic harvesting in orchards" [color: #00be90] {
  pc5_trees
  pc5_harvests
  pc5_apples
}

Table pc5_trees {
  id int [pk, increment]
  field_id int [ref: > fields.id]
  tree_identifier varchar
  variety varchar
  rootstock varchar
  planting_date int
  grid_row int
  grid_col int
  location geometry [note: 'Postgis Point']
  elevation float

  indexes {
    (field_id, tree_identifier) [unique]
  }
}

Table pc5_harvests {
  id int [pk, increment]
  mission_id int [ref: > missions.id]
  tree_id int [ref: > pc5_trees.id]
  record_type varchar [note: 'inspection or application']
  fruit_count int
}

Table pc5_apples {
  id int [pk, increment]
  harvest_id int [ref: > pc5_harvests.id]
  apple_id varchar
  size_class varchar
  overcolor_class varchar
  picture_id varchar
  class_id int
  bbox_x float
  bbox_y float
  bbox_width float
  bbox_height float
  confidence float
}


TableGroup "Pilot Case 6 (KUL): Robotic pruning and thinning with XR in orchards" [color: #050505] {
  pc6_operations
  pc6_branches
}

Table pc6_operations {
  id int [pk, increment]
  mission_id int [ref: > missions.id]
  tree_id int [ref: > pc5_trees.id]
  operation_type varchar [note: 'thinning or pruning']
  record_type varchar [note: 'inspection or application']
  branches_to_cut_count int
  branches_cut_count int
}

Table pc6_branches {
  id int [pk, increment]
  operation_id int [ref: > pc6_operations.id]
  branch_id varchar
  age_years int
  length_m float
  diameter_cm float
  picture_id varchar
  class_id int
  bbox_x float
  bbox_y float
  bbox_width float
  bbox_height float
  confidence float
}